# toy-qwen3

./: .gitignore  Makefile  README.md  generate.py  main.py  pyproject.toml  train.py
src/toy_qwen3/: __init__.py  config.py  layers.py  model.py
