[project]
name = "toy-qwen3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["I", "E", "F", "W", "C90"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["toy_qwen3"]
